--- a/mangroove-api-server/Cargo.toml
+++ b/mangroove-api-server/Cargo.toml
@@ -8,6 +8,10 @@ prost = "0.14.1"
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
 tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
+sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
+log = "0.4.28"
+tracing-subscriber = "0.3.20"
+tracing = "0.1.41"
 
 [build-dependencies]
 tonic-prost-build = "*"
