--- a/mangroove-db/Cargo.toml
+++ b/mangroove-db/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mangroove-reader"
+name = "mangroove-db"
 version = "0.1.0"
 edition = "2024"
 
@@ -15,6 +15,8 @@ prost = "0.14.1"
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
 object_store = { version = "0.12.4", features = ["aws"] }
+clap = { version = "4.5.51", features = ["derive"] }
+tempfile = "3.23.0"
 
 [build-dependencies]
 tonic-prost-build = "*"
