--- a/mangroove-api-server/Cargo.toml
+++ b/mangroove-api-server/Cargo.toml
@@ -12,6 +12,7 @@ sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rust
 log = "0.4.28"
 tracing-subscriber = "0.3.20"
 tracing = "0.1.41"
+prost-types = "0.14.1"
 
 [build-dependencies]
 tonic-prost-build = "*"
