--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: mangroove-development
+      POSTGRES_DB: mangrobe-development
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - postgres_data:/var/lib/postgresql
