--- a/mangrobe-api-server/Cargo.toml
+++ b/mangrobe-api-server/Cargo.toml
@@ -18,6 +18,8 @@ anyhow = "1.0.100"
 thiserror = "2.0.17"
 strum_macros = "0.27.2"
 strum = "0.26.3"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 
 [build-dependencies]
 tonic-prost-build = "*"
