--- a/mangrobe-api-server/Cargo.toml
+++ b/mangrobe-api-server/Cargo.toml
@@ -20,6 +20,7 @@ strum_macros = "0.27.2"
 strum = "0.26.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+tonic-reflection = "0.14.2"
 
 [build-dependencies]
 tonic-prost-build = "*"
