--- a/mangrobe-api-server/Cargo.toml
+++ b/mangrobe-api-server/Cargo.toml
@@ -21,6 +21,7 @@ strum = "0.26.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tonic-reflection = "0.14.2"
+ahash = "0.8.12"
 
 [build-dependencies]
 tonic-prost-build = "*"
