--- a/mangrobe-db/Cargo.toml
+++ b/mangrobe-db/Cargo.toml
@@ -5,21 +5,27 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
-vortex = { version = "0.54.0", features = ["default", "tokio"] }
-vortex-array = "0.54.0"
-vortex-datafusion = "0.54.0"
+vortex = { version = "0.56.0", features = ["default", "tokio"] }
+vortex-array = "0.56.0"
+vortex-datafusion = "0.56.0"
 datafusion = "50.3.0"
 arrow-array = "56.2.0"
 async-trait = "0.1.89"
 prost = "0.14.1"
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
+hyper = { version = "0.14.28", features = ["full"] }
+snap = "1.1.1"
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
 object_store = { version = "0.12.4", features = ["aws"] }
 clap = { version = "4.5.51", features = ["derive"] }
 tempfile = "3.23.0"
 uuid = { version = "1.18.1", features = ["v7"] }
 prost-types = "0.14.1"
 anyhow = "1.0.100"
+arrow-schema = "56.2.0"
+parquet = "56.2.0"
 
 [build-dependencies]
 tonic-prost-build = "*"
