move prometheus-flink to examples

--- a/mangrobe-lab/examples/prometheus-flink/examples-flink/compose.yml
+++ b/mangrobe-lab/examples/prometheus-flink/examples-flink/compose.yml
@@ -1,8 +1,8 @@
 services:
   jobmanager:
     build:
-      context: ../..
-      dockerfile: mangrobe-lab/examples-flink/Dockerfile
+      context: ../../../..
+      dockerfile: Dockerfile
     ports:
       - "8081:8081"
     command: standalone-job --job-classname mangrobelabs.prometheus.Main --jars /opt/flink/usrlib/examples-flink-0.1.jar
@@ -19,8 +19,8 @@ services:
 
   taskmanager:
     build:
-      context: ../..
-      dockerfile: mangrobe-lab/examples-flink/Dockerfile
+      context: ../../../..
+      dockerfile: Dockerfile
     depends_on:
       - jobmanager
     command: taskmanager
